Migrated Tomcat Vault to be compatible with JDK18+ by removing deprecated classes (SecurityManager, AccessController - Tomcat Vault will not work properly on JDK18+ without doing so), and incidentally makes Tomcat Vault be compatible with Tomcat 10 (since Tomcat 10 is likely to run on JDK18+) - Also refactored Unit Tests to not use the deprecated classes, and avoids using the System property to test - Added Maven profiles to specify the Tomcat major version to build for (default major version: Tomcat 9) - Updated `INSTALL.md` with the appropriate details for building with a different Maven profile for different Tomcat versions (either major version or exact version) - Removed other minor deprecation warnings (e.g. `new Integer() is replaced with `Integer.valueOf()`